add Aeroh Link/Constant/EnvConstants.swift to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+Aeroh Link/Constant/EnvConstants.swift
+
+
 # Created by https://www.toptal.com/developers/gitignore/api/xcode,macos,emacs,swift,vim,visualstudiocode,windows,linux,objective-c
 # Edit at https://www.toptal.com/developers/gitignore?templates=xcode,macos,emacs,swift,vim,visualstudiocode,windows,linux,objective-c
 
