tell iOS/User why we need bluetooth

--- a/Aeroh-Link-Info.plist
+++ b/Aeroh-Link-Info.plist
@@ -9,5 +9,7 @@
 		<key>UILaunchScreen</key>
 		<dict/>
 	</dict>
+    <key>NSBluetoothAlwaysUsageDescription</key>
+    <string>We use Bluetooth to connect to nearby Aeroh devices for provisioning.</string>
 </dict>
 </plist>
