Addd support to show real wifi network in the UI

--- a/Aeroh-Link-Info.plist
+++ b/Aeroh-Link-Info.plist
@@ -9,7 +9,7 @@
 		<key>UILaunchScreen</key>
 		<dict/>
 	</dict>
-    <key>NSBluetoothAlwaysUsageDescription</key>
-    <string>We use Bluetooth to connect to nearby Aeroh devices for provisioning.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need Wi-Fi access to connect Aeroh IoT devices to the internet.</string>
 </dict>
 </plist>
