--- a/AerohLink/AerohLink.entitlements
+++ b/AerohLink/AerohLink.entitlements
@@ -2,12 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UILaunchScreen</key>
-	<dict>
-		<key>UIColorName</key>
-		<string>AccentColor</string>
-		<key>UILaunchScreen</key>
-		<dict/>
-	</dict>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>webcredentials:cloud.aeroh.org</string>
+	</array>
 </dict>
 </plist>
